--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
-
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 
 :root {
-    --primary-color-hue: 252;
+     --primary-color-hue: 252;
+    --dark-color-lightness: 17%;
     --light-color-lightness: 95%;
     --white-color-lightness: 100%;
 
@@ -11,7 +11,11 @@
     --color-grey: hsl(252, 15%, 65%);
     --color-primary: hsl(var(--primary-color-hue), 75%, 60%);
     --color-secondary: hsl(252, 100%, 90%);
-  
+    --color-success: hsl(120, 95%, 65%);
+    --color-danger: hsl(0, 95%, 65%);
+    --color-dark: hsl(252, 30%, var(--dark-color-lightness));
+    --color-black: hsl(252, 30%, 10%);
+
     --border-radius: 2rem;
     --card-border-radius: 1rem;
     --btn-padding: 0.6rem 2rem;
@@ -20,6 +24,7 @@
 
     --sticky-top-left: 5.4rem;
     --sticky-top-right: -18rem;
+
 
 }
 
@@ -47,7 +52,7 @@ body {
 }
 
 .profile {
-margin-top: 7rem;    
+margin-top: 6rem;    
 }
 
 .profile-photo {
@@ -154,6 +159,7 @@ main .container .left .profile {
 
 /* =============== Sidebar ============== */
 .left .sidebar {
+    margin-top: 1rem;
     background: black;
     border-radius: var(--card-border-radius);
 }
@@ -233,7 +239,7 @@ main .container .left .profile {
     top: 0;
     left: 110%;
     width: 30rem;
-    background: var(--color-white);
+    background:#181818;
     border-radius: var(--card-border-radius);
     padding: var(--card-padding);
     box-shadow: 0 0 2rem hsl(var(--color-primary), 75%, 60%, 25%);
@@ -246,7 +252,7 @@ main .container .left .profile {
     width: 1.2rem;
     height: 1.2rem;
     display: block;
-    background: var(--color-white);
+    background:  #181818;
     position: absolute;
     left: -0.6rem;
     transform: rotate(45deg);
@@ -317,6 +323,10 @@ main .container .left .profile {
     align-items: center;
     font-size: 1.4rem;
     margin: 0.6rem 0;
+}
+
+.middle .feed .action-buttons i {
+   margin-right: 4px;
 }
 
 .middle .liked-by {
