--- a/style.css
+++ b/style.css
@@ -46,6 +46,15 @@ body {
 }
 
 /* =============== General Style ============== */
+a:link{
+    color: white;
+}
+
+a:visited {
+    color: white;   
+    text-decoration: none;
+}
+
 .container {
     width: 80%;
     margin: 0 auto;
@@ -122,10 +131,6 @@ img {
     margin-left: 1rem;
     font-size: 0.9rem;
     color: var(--color-dark);
-}
-
-nav .search-bar input[type="search"]::placeholder {
-    color: var(--color-grey);
 }
 
 /* =============== Main ============== */
@@ -242,7 +247,7 @@ main .container .left .profile {
     background:#181818;
     border-radius: var(--card-border-radius);
     padding: var(--card-padding);
-    box-shadow: 0 0 2rem hsl(var(--color-primary), 75%, 60%, 25%);
+    box-shadow: 0 4px 8px rgba(255, 255, 255, 0.2);
     z-index: 8;
     display: none;
 }
@@ -289,6 +294,64 @@ main .container .left .profile {
     background: transparent;
     color: white;
     margin-right: 1rem;
+}
+
+/* =============== Messages ============== */
+.middle .messages {
+    background: black;
+    border-radius: var(--card-border-radius);
+    padding: var(--card-padding);
+    margin: 1rem 0;
+    font-size: 0.85rem;
+    line-height: 1.5;
+}
+
+.middle .messages .heading {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+    font-size: large;
+}
+
+.middle .messages .message {
+    display: flex;
+    background: #181818;
+    border-radius: var(--card-border-radius);
+    padding: var(--card-padding);
+    margin: 1rem 0;
+    font-size: 0.85rem;
+    line-height: 1.5;
+}
+
+.middle .message .profile-photo {
+    position: relative;
+    overflow: visible;
+    z-index: -1;
+}
+
+.middle .profile-photo img {
+    border-radius: 50%;
+}
+
+.middle .messages .message:last-child {
+    margin: 0;
+}
+
+.middle .messages .message .message-body {
+    font-size:0.8rem;
+    margin-left: 0.8rem;
+}
+
+.middle .messages .message .profile-photo .active {
+    width: 0.8rem;
+    height: 0.8rem;
+    border-radius: 50%;
+    border: 3px solid var(--color-white);
+    background: var(--color-success);
+    position: absolute;
+    bottom: 0;
+    right: 0;
 }
 
 /* =============== Feeds ============== */
@@ -396,6 +459,192 @@ footer {
     margin-top: 1rem;
     color: var(--color-grey);
     text-align: center;
+}
+
+/* =============== Level Section ============== */
+.levels {
+    background-color: #000;
+    color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    margin: 20px auto;
+}
+
+.level-cards {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 1.5rem;
+}
+
+.level-card {
+    background-color: #111;
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(255, 255, 255, 0.2);
+    width: 150px;
+}
+
+.level-card img {
+    width: 100%;
+    border-radius: 10px;
+    margin-bottom: 10px;
+}
+
+.level-card h4 {
+    font-size: 1.1em;
+    margin-bottom: 5px;
+}
+
+.level-card p {
+    font-size: 0.9em;
+    color: #aaa;
+}
+
+.level-card i {
+   color: yellow;
+}
+
+.daily-stars i{
+    color: yellow;
+}
+
+.progress-container {
+    margin: 20px 0;
+}
+
+.progress-container i {
+    color: yellow;
+}
+
+.progress {
+    background-color: #444;
+    border-radius: 10px;
+    height: 20px;
+    width: 80%;
+    margin: 0 auto;
+}
+
+.progress-bar {
+    background-color: #9b6ef3;
+    height: 100%;
+    margin-top: 1rem;
+    border-radius: 10px;
+}
+
+.daily-stars h3 {
+    margin-top: 10px;
+    font-size: 1.2em;
+    color: #9b6ef3;
+}
+
+/* =============== Profile ============== */
+/* Profile Card Styling */
+.middle .profile-card {
+    display: flex;
+    flex-direction: column;
+    background: #181818;
+    border-radius: var(--card-border-radius);
+    padding: var(--card-padding);
+}
+
+.middle .profile-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between; /* Butonu sağa hizalar */
+}
+
+.middle .profile-pic {
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.middle .profile-pic img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.middle .user-info {
+    margin-top: 1rem;
+    color: white;
+}
+
+.middle .user-info h2 {
+    margin: 0;
+    font-size: 1.5rem; /* Kullanıcı adını daha büyük yapalım */
+}
+
+.middle .user-info p {
+    margin: 0.5rem 0 0;
+    color: var(--color-grey);
+}
+
+.middle .set-profile-btn {
+    background: var(--color-primary);
+    color: white;
+    padding: 0.6rem 1.8rem;
+    border-radius: var(--border-radius);
+    cursor: pointer;
+    font-size: 0.9rem;
+    transition: all 300ms ease;
+}
+
+.middle .set-profile-btn:hover {
+    opacity: 0.8;
+}
+
+/* Follow Info */
+.middle .follow-info {
+    display: flex;
+    gap: 1.5rem;
+    margin-top: 1rem;
+    color: var(--color-grey);
+}
+
+.middle .follow-info span {
+    font-size: 0.9rem;
+}
+
+.tabs {
+    display: flex;
+    justify-content: center;
+    margin-top: 1rem;
+    border-top: 2px solid var(--color-grey);
+}
+
+.tabs ul {
+    display: flex;
+    list-style: none;
+    padding: 0.5rem 0;
+}
+
+.tabs li {
+    margin: 0 2rem;
+    font-size: 1rem;
+    cursor: pointer;
+    position: relative;
+}
+
+.tabs li.selected {
+    color: var(--color-primary);
+}
+
+.tabs li.selected::after {
+    content: "";
+    position: absolute;
+    bottom: -5px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: var(--color-primary);
+}
+
+.tabs li:hover {
+    text-decoration: underline;
 }
 
 /* ================= 
