--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ img {
     width: 30vw;
     margin-left: 1rem;
     font-size: 0.9rem;
-    color: var(--color-dark);
+    color: var(--color-white);
 }
 
 /* =============== Main ============== */
@@ -248,7 +248,7 @@ main .container .left .profile {
     border-radius: var(--card-border-radius);
     padding: var(--card-padding);
     box-shadow: 0 4px 8px rgba(255, 255, 255, 0.2);
-    z-index: 8;
+    z-index: 10;
     display: none;
 }
 
@@ -298,12 +298,10 @@ main .container .left .profile {
 
 /* =============== Messages ============== */
 .middle .messages {
-    background: black;
+    background: var(--color-dark);
     border-radius: var(--card-border-radius);
     padding: var(--card-padding);
-    margin: 1rem 0;
-    font-size: 0.85rem;
-    line-height: 1.5;
+    margin-top: var(--card-padding);
 }
 
 .middle .messages .heading {
@@ -311,23 +309,33 @@ main .container .left .profile {
     align-items: center;
     justify-content: space-between;
     margin-bottom: 1rem;
-    font-size: large;
+    font-size: larger;
+}
+
+.middle .messages i {
+    font-size: 1.4rem;
+}
+
+.middle .messages .search-bar {
+    display: flex;
+    margin-bottom: 1rem;
+}
+
+.middle .messages .search-bar input {
+    margin-right: 2rem;
+    color: var(--color-light);
 }
 
 .middle .messages .message {
     display: flex;
-    background: #181818;
-    border-radius: var(--card-border-radius);
-    padding: var(--card-padding);
-    margin: 1rem 0;
-    font-size: 0.85rem;
-    line-height: 1.5;
+    gap: 1rem;
+    margin-bottom: 1rem;
+    align-items: start;
 }
 
 .middle .message .profile-photo {
     position: relative;
     overflow: visible;
-    z-index: -1;
 }
 
 .middle .profile-photo img {
@@ -338,9 +346,8 @@ main .container .left .profile {
     margin: 0;
 }
 
-.middle .messages .message .message-body {
+.middle .messages .message p {
     font-size:0.8rem;
-    margin-left: 0.8rem;
 }
 
 .middle .messages .message .profile-photo .active {
@@ -353,7 +360,6 @@ main .container .left .profile {
     bottom: 0;
     right: 0;
 }
-
 /* =============== Feeds ============== */
 .middle .feeds .feed {
     background: #181818;
@@ -433,7 +439,7 @@ main .container .right {
 }
 
 .right .follow {
-    background: #181818;
+    background: var(--color-dark);
     padding: var(--card-padding);
     border-radius: var(--card-border-radius);
     margin-bottom: 0.7rem;
@@ -693,10 +699,6 @@ MEDIA QUERIES FOR SMALL TABLETS AND MOBILE PHONES
 ==================== */
 
 @media screen and (max-width: 992px) {
-    nav .search-bar {
-        display: none;
-    }
-
     main .container {
         grid-template-columns: 0 auto 5rem;
         gap: 0;
