--- a/style.css
+++ b/style.css
@@ -110,8 +110,12 @@ img {
     font-weight: 500;
 }
 
-.text-muted {
+.text-lvl {
     color: var(--color-grey);
+    margin-top: 0.4rem;
+}
+.text-star {
+    color: white;
 }
 
 .search-bar {
@@ -788,6 +792,61 @@ footer {
     text-decoration: underline;
 }
 
+/* Popup genel tasarımı */
+.profile-popup {
+    display: none; /* Başlangıçta gizli */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    z-index: 1000;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .popup-content {
+    background: #6a4ce1;
+    border-radius: 10px;
+    padding: 20px;
+    text-align: center;
+    color: white;
+    width: 300px;
+  }
+  
+  .popup-logo {
+    width: 50px;
+    margin-bottom: 10px;
+  }
+  
+  .profile-photo-preview img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin: 20px 0;
+    border: 2px solid white;
+  }
+  
+  .popup-actions {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+  }
+  
+  .popup-btn {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    background: white;
+    color: #333;
+  }
+  
+  .cancel-btn {
+    background: black;
+    color: white;
+  }
 /* ================= 
 MEDIA QUERIES FOR SMALL LAPTOP AND BIG TABLETS 
 ==================== */
