--- a/LogOutSure.css
+++ b/LogOutSure.css
@@ -10,7 +10,7 @@ a.button.cancel:visited {
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
     background-color: #3c2454;
