--- a/LoginPageStyle.css
+++ b/LoginPageStyle.css
@@ -3,7 +3,7 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Poppins', sans-serif;
 }
 body {
 	display: flex;
@@ -19,7 +19,7 @@ body {
 	width: 80%;
 	max-width: 1200px;
 	grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-	gap: 10px; /* Elemanlar arasındaki boşluk */
+	gap: 10px; 
 }
 .logo img {
 	width: 500px;
