--- a/style.css
+++ b/style.css
@@ -714,7 +714,7 @@ footer {
 
 .middle .user-info h2 {
     margin: 0;
-    font-size: 1.5rem; /* Kullanıcı adını daha büyük yapalım */
+    font-size: 1.5rem;
     margin-left: 0.7rem;
 }
 
