--- a/style.css
+++ b/style.css
@@ -859,7 +859,7 @@ footer {
     transform: scale(1.2);
 }
 
-/* Aktif (beğenilmiş) ikon için stil */
+/* Aktif ikon için stil */
 .star-button i.active {
     color: #ffe135;
 }
@@ -868,7 +868,7 @@ footer {
     color: #fe019a;
 }
 
-/* Sayaçlara stil verelim */
+/* Sayaçlara stil */
 .count {
     margin-left: 5px;
     font-size: 1rem;
