--- a/style.css
+++ b/style.css
@@ -714,7 +714,7 @@ footer {
 
 .middle .user-info h2 {
     margin: 0;
-    font-size: 1.5rem;
+    font-size: 1.5rem; /* Kullanıcı adını daha büyük yapalım */
     margin-left: 0.7rem;
 }
 
@@ -859,7 +859,7 @@ footer {
     transform: scale(1.2);
 }
 
-/* Aktif ikon için stil */
+/* Aktif (beğenilmiş) ikon için stil */
 .star-button i.active {
     color: #ffe135;
 }
@@ -868,7 +868,7 @@ footer {
     color: #fe019a;
 }
 
-/* Sayaçlara stil */
+/* Sayaçlara stil*/
 .count {
     margin-left: 5px;
     font-size: 1rem;
