--- a/style.css
+++ b/style.css
@@ -714,7 +714,7 @@ footer {
 
 .middle .user-info h2 {
     margin: 0;
-    font-size: 1.5rem; /* Kullanıcı adını daha büyük yapalım */
+    font-size: 1.5rem; 
     margin-left: 0.7rem;
 }
 
@@ -859,7 +859,7 @@ footer {
     transform: scale(1.2);
 }
 
-/* Aktif (beğenilmiş) ikon için stil */
+/* Aktif ikon için stil */
 .star-button i.active {
     color: #ffe135;
 }
